# grpc-web-example

./: README.md
client-js/: package-lock.json  package.json
client-js/src/: App.js  streaming_grpc_web_pb.js  streaming_pb.js
proto/: streaming.proto
server/: Cargo.toml  build.rs
server/src/: main.rs
