[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
futures-core = "0.3.25"
log = "0.4.17"
prost = "0.11.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
tonic = "0.8.2"
tonic-reflection = "0.5.0"
tonic-web = "0.4.0"

[build-dependencies]
tonic-build = "0.8.2"